tests/snapshots/fixtures__fixture@lsp__identifiers__assigned_identifiers_ok.snap
---
source: tests/fixtures.rs
expression: tree_sexp(&tree)
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (person identifier:
            (identifier) name:
            (string))
          (software_system identifier:
            (identifier) name:
            (string) body:
            (software_system_block
              (container identifier:
                (identifier) name:
                (string) body:
                (container_block
                  (component identifier:
                    (identifier) name:
                    (string))))))
          (software_system identifier:
            (identifier) name:
            (string)))))))
