tests/snapshots/fixtures__fixture@lsp__identifiers__multi_line_invalid_nesting_err.snap
---
source: tests/fixtures.rs
expression: tree_sexp(&tree)
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (software_system identifier:
            (identifier) name:
            (string) body:
            (software_system_block
              (ERROR
                (identifier)
                (shape_value)))))))))
