tests/snapshots/fixtures__fixture@lsp__identifiers__view_animations_ok.snap
---
source: tests/fixtures.rs
assertion_line: 44
expression: tree_sexp(&tree)
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (person identifier:
            (identifier) name:
            (string))
          (software_system identifier:
            (identifier) name:
            (string) body:
            (software_system_block
              (container identifier:
                (identifier) name:
                (string))
              (container identifier:
                (identifier) name:
                (string) body:
                (container_block
                  (component identifier:
                    (identifier) name:
                    (string))))))
          (deployment_environment identifier:
            (identifier) name:
            (string) body:
            (deployment_environment_block
              (deployment_node identifier:
                (identifier) name:
                (string) body:
                (deployment_node_block
                  (container_instance
                    (container_instance_simple identifier:
                      (identifier) target:
                      (identifier)))))
              (deployment_node identifier:
                (identifier) name:
                (string) body:
                (deployment_node_block
                  (container_instance
                    (container_instance_simple identifier:
                      (identifier) target:
                      (identifier)))))))))
      (views body:
        (views_block
          (system_context_view scope:
            (identifier) key:
            (string) body:
            (system_context_view_block
              (include_statement value:
                (identifier) value:
                (identifier))
              (animation_statement body:
                (animation_block value:
                  (identifier) value:
                  (identifier)))))
          (container_view scope:
            (identifier) key:
            (string) body:
            (container_view_block
              (include_statement value:
                (identifier) value:
                (identifier))
              (animation_statement body:
                (animation_block value:
                  (identifier) value:
                  (identifier)))))
          (deployment_view scope:
            (identifier) environment:
            (string) body:
            (deployment_view_block
              (include_statement value:
                (identifier) value:
                (identifier) value:
                (identifier) value:
                (identifier))
              (animation_statement body:
                (animation_block value:
                  (identifier) value:
                  (identifier) value:
                  (identifier) value:
                  (identifier))))))))))
